...
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.spacedBy(16.dp)
            ) {
                MagicCubeButton(
                    text = stringResource(id = R.string.start),
                    onClick = viewModel::onStartClick,
                    modifier = Modifier.testTag("start_button")
                )
                MagicCubeButton(
                    text = stringResource(id = R.string.options),
                    onClick = viewModel::onOptionsClick,
                    modifier = Modifier.testTag("options_button")
                )
                MagicCubeButton(
                    text = stringResource(id = R.string.quit),
                    onClick = onQuitClick,
                    modifier = Modifier.testTag("quit_button")
                )
...
