<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Magic Cube</string>
    <string name="how_to_play">How to Play:</string>
    <string name="rotate_cube_hint">- Drag outside the cube to rotate it entirely</string>
    <string name="rotate_face_hint">- Drag on a cube face to rotate only that slice</string>

    <string name="options_section">Options:</string>
    <string name="shuffle_description">- "Shuffle" indicates how many rotations the cube will perform to be mixed before the game starts</string>
    <string name="speed_description">- "Speed" indicates how fast the cube will rotate when the screen is touched and dragged</string>
    <string name="size_description">- "Size" indicates the size of the cube that will be displayed on the screen</string>
    <string name="shuffle">Shuffle</string>
    <string name="speed">Speed</string>
    <string name="size">Size</string>
    <string name="start">Start</string>
    <string name="options">Options</string>
    <string name="quit">Quit</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="back">Back</string>

    <!-- <string name="rotate_cube_hint">- Arrastra fuera del cubo para girarlo por completo</string> -->

    <!-- <string name="rotate_face_hint">- Arrastra en una cara del cubo para girar solo esa cara</string> -->
</resources>
