...

                            Button(
                                onClick = viewModel::resetSettings,
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .height(52.dp)
                                    .testTag("reset_button")
                            ) {
                                Text(
                                    text  = stringResource(R.string.reset_to_default),
                                    style = MaterialTheme.typography.labelLarge
                                )
                            }
...
